--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 /* regole generali  */
 
 .container {
-    max-width: 900px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -18,17 +18,15 @@
     border: 1px dashed black;
 }
 
+.row {
+    display: flex;
+}
+
 /* regole header  */
 
 .header {
     background-color: rgb(126, 201, 211);
     padding: 20px 0 20px 0;
-}
-
-.header .container {
-    /* max-width: 900px;
-    margin: 0 auto; */
-    display: flex;
 }
 
 .header .col {
@@ -51,31 +49,31 @@
 /* regole section 1 */
 
 .section1 {
-    padding: 45px 0 45px 0;
+    padding: 45px 0;
     background-color: blue;
 }
 
 .section1 .container {
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
+    max-width: 900px;
+    margin: 0 auto;
 }
 
 .section1 .col {
     min-height: 387px;
     background-color: rgb(176, 108, 174);
-    flex-basis: 75%;
+    /* flex-basis: 75%; */
+    /* NON OCCORREVA USARE IL FLEX IN QUESTO CASO, 
+    AVREMMO AVUTO PROBLEMI NEL RESTRINGERE LA PAGINA */
 }
 
 
 /* regole section 2, section 4  e parte di section 3 */
 
 .section2, .section4, .section3 {
-    padding: 45px 0 45px 0;
+    padding: 45px 0;
     background-color: rgb(255, 255, 254);
-}
-
-.section2 .container, .section4 .container, .section3 .container {
-    display: flex;
 }
 
 .section2 .col1, .section4 .col1, .section3 .col1 {
@@ -97,7 +95,7 @@
     background-color: rgb(168, 168, 164);
 }
 
-.section3 .container {
+.row-reversee {
     flex-direction: row-reverse;
 }
 
@@ -109,9 +107,6 @@
     padding: 45px 0 45px 0;
 }
 
-.section5 .container {
-    display: flex;
-}
 
 .section5 .col {
     min-height: 868px;
@@ -127,11 +122,7 @@
 }
 
 .footer1 {
-    padding: 10px 0 45px 0;
-}
-
-.footer1 .container{
-    display: flex;
+    padding: 10px 0 45px;
 }
 
 .footer1 .col {
@@ -152,9 +143,11 @@
 
 .footer2 .container {
     background-color: aquamarine;
-    display: flex;
+    padding: 18px 0;
+}
+
+.footer2 .row {
     justify-content: space-between;
-    padding: 18px 0 18px 0;
 }
 
 .footer2 .tasto {
@@ -162,6 +155,7 @@
     min-height: 33px;
     min-width: 82px;
 }
+
 
 
 
