--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,9 @@ a {
 /* header  */
 
 .header {
-    background-color: rgb(28, 105, 206);
+    background-color: rgb(0 98 227);
     padding: 20px 0 20px 0;
+    font-size: 18px;
 }
 
 .header .col {
@@ -67,7 +68,7 @@ a {
 .header .col3 a {
     background-color: white;
     color: black;
-    padding: 5px;
+    padding: 8px;
     border-radius: 50%;
 }
 
@@ -79,7 +80,8 @@ a {
 
 .section1 {
     padding: 45px 0;
-    background-color: blue;
+    background-image: url(../img/jumbo.png);
+    background-size: cover;
 }
 
 .section1 .container {
@@ -88,9 +90,46 @@ a {
 }
 
 .section1 .col {
-    min-height: 387px;
-    background-color: rgb(176, 108, 174);
+    min-height: 387px;  
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center; 
 }
+
+.section1 h1 {
+    font-size: 56px;
+    color: white;
+}
+
+.section1 p {
+    font-size: 24px;
+    color: white;
+}
+
+.section1 a {
+    font-size: 24px;
+    padding: 15px;
+    border-radius: 40%;
+}
+
+.section1 .download-buttons {
+    display: flex;
+    justify-content: space-evenly;
+    width: 700px;
+}
+
+#download-button {
+    background-color: white;
+    color: black;
+}
+
+#open-button {
+    background-color: black;
+    color: white;
+}
+
+
 
 
 /* section 2, section 4  e parte di section 3 */
