--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,10 @@ a {
 .section5 h3 {
     font-size: 34px;
     background-image: url(../img/stars.svg);
-    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding: 80px 60px 20px 60px;
 }
 
 .section5 p {
